--- a/index.html
+++ b/index.html
@@ -1,1 +1,166 @@
-My Github Page
+
+<html>
+  <head>
+    <link rel="stylesheet" href="style.css"/>
+  </head>
+  <body>
+    <div class="container">
+      <h1>SVG CSS Injection Demo</h1>
+      <div id="introduction">
+        <h2>Introduction</h2>
+        <ul>
+          <li>What it is</li>
+        </ul><a href="#">Link to full article</a>
+        <h2>Advantages</h2>
+      </div>
+      <div id="demo">
+        <h2>Demo</h2>
+        <ul>
+          <li>
+            <h3>Basic SVG CSS Injection</h3><span class="icon icon-bolt">Bolt</span>
+          </li>
+          <li>
+            <h3>Modifying SVG Prior to Injection</h3><span class="icon icon-dial">The SVG references <em>was</em> black, but was modified at runtime to be red.</span>
+          </li>
+          <li>
+            <h3>Rewriting CSS Rules</h3><span class="icon icon-dial"></span><a class="button">Change the colors</a>
+          </li>
+        </ul>
+      </div>
+      <div id="code">
+        <h2>Sample Code</h2>
+        <p>Lorem ipsum</p>
+        <h3>HTML</h3><code> 
+          <pre></pre></code>
+        <h3>CSS</h3><code>
+          <pre></pre></code>
+        <h3>Javascript</h3><code>
+          <pre></pre></code>
+      </div>
+      <div id="performance">
+        <h2>Performance</h2>
+      </div>
+      <div id="best-practices">
+        <h2>Best Practices</h2>
+      </div>
+    </div>
+    <svg id="prefix-svg-container" width="0" height="0">
+      <svg id="icon-ampersand" xmlns="http://www.w3.org/2000/svg" class="iconic"><svg style="enable-background:new 0 0 18.663 32" xmlns="http://www.w3.org/2000/svg" xml:space="preserve" height="32px" width="19px" version="1.1" y="0px" x="0px" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 18.663 32">	<path d="m9.2 32c-2.4 0-4.7-0.9-6.5-2.7-3.6-3.6-3.6-9.4 0-13l8.1-7.9c0.46-0.46 0.73-1.1 0.73-1.8 0-0.68-0.27-1.3-0.74-1.8-1.2-0.7-2.8-0.7-3.8 0.2-1 1-1 2.7 0 3.6l-2.8 2.7c-2.6-2.4-2.6-6.5 0-9.1s6.7-2.6 9.3-0.004c1.2 1.2 1.9 2.9 1.9 4.6 0 1.8-0.68 3.4-1.9 4.6l-8.1 7.9c-2 2-2 5.3 0.02 7.4 2 2 5.3 2 7.4 0 2-2 2-5.3 0-7.4l-1.4-1.4 4.4-4.3 2.8 2.8-1.7 1.7c2.3 3.6 1.9 8.4-1.3 11-2 1-4 2-6.8 2z" fill="#010101"/></svg>
+      </svg>
+      <svg id="icon-aperture" xmlns="http://www.w3.org/2000/svg" class="iconic"><svg style="enable-background:new 0 0 32 32" xmlns="http://www.w3.org/2000/svg" xml:space="preserve" height="32px" width="32px" version="1.1" y="0px" x="0px" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 32 32">
+	<g fill="#010101">
+		<path d="m21 14l5.7-9.7c-3-2.6-7-4.3-11-4.3-1 0-2 0.12-2.9 0.29l8 14z"/>
+		<path d="m20 20h11c1-1 1-3 1-4 0-3.9-1.4-7.4-3.7-10l-8 14z"/>
+		<path d="m16 10l-5.4-9.2c-4.4 1.5-8 4.8-9.8 9.2h15z"/>
+		<path d="m16 22l5.4 9.1c4.4-1.5 8-4.8 9.8-9.1h-15z"/>
+		<path d="m12 12h-11c-0.77 1-1 3-1 4 0 3.9 1.4 7.4 3.8 10l8.2-14z"/>
+		<path d="m11 18l-5.7 9.8c2.7 2 6.7 4 11 4 1 0 2.1-0.12 3-0.3l-8-14z"/>
+	</g>
+</svg>
+
+      </svg>
+      <svg id="icon-bolt" xmlns="http://www.w3.org/2000/svg" class="iconic"><svg style="enable-background:new 0 0 32 32" xmlns="http://www.w3.org/2000/svg" xml:space="preserve" height="32px" width="32px" version="1.1" y="0px" x="0px" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 32 32">	<polygon points="32 0 8 16 14 20 0 32 24 20 18 16" fill="#010101"/></svg>
+      </svg>
+      <svg id="icon-brush" xmlns="http://www.w3.org/2000/svg" class="iconic"><svg style="enable-background:new 0 0 31.998 32" xmlns="http://www.w3.org/2000/svg" xml:space="preserve" height="32px" width="32px" version="1.1" y="0px" x="0px" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 31.998 32">
+		<path d="m16 21c0-2.9-2.4-5.3-5.3-5.3s-5.3 2.4-5.3 5.3l0.004 0.004c-0.4 4-2.5 8-5.7 10l0.016 0.02c1.6 0 3.4 1 5.3 1 5.7 0 11-5 11-11z" fill="#010101"/>
+			<path d="m31 1.2c-1.6-1.6-4.1-1.6-5.7 0l-11 12c2.6 0.94 4.7 3 5.7 5.7l11-11c1-2.7 1-5.3 0-6.8z" fill="#010101"/>
+</svg>
+
+      </svg>
+      <svg id="icon-cloud" xmlns="http://www.w3.org/2000/svg" class="iconic"><svg style="enable-background:new 0 0 32 20" xmlns="http://www.w3.org/2000/svg" xml:space="preserve" height="20px" width="32px" version="1.1" y="0px" x="0px" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 32 20">
+	<path d="m24 4c-0.38 0-0.74 0.061-1.1 0.11-1-2.5-4-4.1-7-4.1s-5.6 1.7-6.9 4.1c-0.4 0-0.7-0.1-1.1-0.1-4.4 0-8 3.6-8 8s3.6 8 8 8h16c4.4 0 8-3.6 8-8s-4-8-8-8zm0 12h-16c-2.2 0-4-1.8-4-4s1.9-3.9 4-3.9c0.008 0.94 0.17 1.9 0.5 2.7l3.7-1.4v-1.6c0-2.2 1.8-4 4-4 1.3 0 2.5 0.64 3.2 1.6-2 1.5-3 3.8-3 6.4h4c0-2.2 1.8-4 4-4s4 1.8 4 4c0 2-2 4-4 4z" fill="#010101"/>
+</svg>
+
+      </svg>
+      <svg id="icon-cog" xmlns="http://www.w3.org/2000/svg" class="iconic"><svg style="enable-background:new 0 0 32 32" xmlns="http://www.w3.org/2000/svg" xml:space="preserve" height="32px" width="32px" version="1.1" y="0px" x="0px" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 32 32">
+	<path d="m32 18v-4l-4.8-2c-0.13-0.38-0.27-0.74-0.44-1.1l1.9-4.8-3-3-4.8 2c-0.36-0.18-0.73-0.32-1.1-0.46l-2-4.7h-4l-2 4.7c-0.4 0.14-0.78 0.29-1.2 0.47l-4.8-1.9-3 2.8 1.9 4.7c-0.1 0-0.3 1-0.4 1l-4.7 2v4l4.7 2c0.14 0.41 0.3 0.8 0.49 1.2l-1.9 4.7 2.8 2.8 4.7-1.9c0.38 0.18 0.77 0.32 1.2 0.46l2 5h4l2-4.8c0.38-0.14 0.75-0.29 1.1-0.46l4.8 1.9 2.8-2.8-2-4.8c0.17-0.36 0.3-0.72 0.44-1.1l5-2zm-16 4c-3.3 0-6-2.7-6-6s2.7-6 6-6 6 2.7 6 6-3 6-6 6z" fill="#010101"/>
+</svg>
+
+      </svg>
+      <svg id="icon-curved-arrow" xmlns="http://www.w3.org/2000/svg" class="iconic"><svg style="enable-background:new 0 0 32 24" xmlns="http://www.w3.org/2000/svg" xml:space="preserve" height="24px" width="32px" version="1.1" y="0px" x="0px" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 32 24">
+	<path d="m28 14c0-7.7-6.3-14-14-14s-14 6.3-14 14c0-5.5 4.5-10 10-10s10 4.5 10 10v2h-4l8 8 8-8h-4v-2z" fill="#010101"/>
+</svg>
+
+      </svg>
+      <svg id="icon-denied" xmlns="http://www.w3.org/2000/svg" class="iconic"><svg style="enable-background:new 0 0 32 32" xmlns="http://www.w3.org/2000/svg" xml:space="preserve" height="32px" width="32px" version="1.1" y="0px" x="0px" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 32 32">
+	<path d="m16 0c-8.8 0-16 7.2-16 16s7.2 16 16 16 16-7.2 16-16-7-16-16-16zm0 4c2.6 0 5 0.84 6.9 2.2l-17 17c-1.2-2-2-4-2-7 0-6.6 5.4-12 12-12zm0 24c-2.6 0-5-0.84-6.9-2.2l17-17c1 2 2 4 2 7 0 7-5 12-12 12z" fill="#010101"/>
+</svg>
+
+      </svg>
+      <svg id="icon-dial" xmlns="http://www.w3.org/2000/svg" class="iconic">	<svg style="enable-background:new 0 0 32 31.828" xmlns="http://www.w3.org/2000/svg" xml:space="preserve" height="32px" width="32px" version="1.1" y="0px" x="0px" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 32 31.828">
+	<g fill="#010101">
+		<circle cx="16" r="4" cy="16"/>
+		<path d="m29 6c-0.34 0.28-0.76 0.47-1.2 0.47-1.1 0-2-0.89-2-2 0-0.48 0.2-0.91 0.48-1.3-2.2-1.7-4.9-2.9-7.8-3.2 0 1-1 1.8-2 1.8s-2-0.8-2-1.8c-3 0.38-5.7 1.6-7.9 3.3 0.25 0.34 0.43 0.73 0.43 1.2 0 1.1-0.89 2-2 2-0.44 0-0.84-0.17-1.2-0.42-2 2.7-3.3 5.9-3.3 9.9 0 8.8 7.2 16 16 16s16-7.2 16-16c0-4-1-7.3-3-10zm-13 18c-4.4 0-8-3.6-8-8 0-2.2 0.9-4.2 2.3-5.7l6-5.5 5.6 5.6c1 2 2 4 2 6 0 4-4 8-8 8z"/>
+	</g>
+</svg>
+
+      </svg>
+      <svg id="icon-eye" xmlns="http://www.w3.org/2000/svg" class="iconic">	<svg style="enable-background:new 0 0 32 24" xmlns="http://www.w3.org/2000/svg" xml:space="preserve" height="24px" width="32px" version="1.1" y="0px" x="0px" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 32 24">
+	<g fill="#010101">
+		<path d="m16 0c-8.8 0-16 12-16 12s7.2 12 16 12 16-12 16-12-7-12-16-12zm0 20c-4.4 0-8-3.6-8-8s3.6-8 8-8 8 3.6 8 8-4 8-8 8z"/>
+		<circle cx="16" r="4" cy="12"/>
+	</g>
+</svg>
+
+      </svg>
+      <svg id="icon-fork" xmlns="http://www.w3.org/2000/svg" class="iconic">	<svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+	 width="28px" height="32px" viewBox="0 0 28 32" enable-background="new 0 0 28 32" xml:space="preserve">
+<g>
+	<path fill="#010101" d="M20,0v3.9c0,1.6-0.62,3.1-1.8,4.2l-11,11c-1.9,2-2.8,4-3,7h-4l6,6l6-6h-4c0.1-1.399,0.68-2.8,1.7-3.8l11-11
+		c2-1.9,3-4.5,3-7.1V0.3h-4L20,0z"/>
+	<path fill="#010101" d="M24,26c-0.109-2.5-1.1-4.8-2.9-6.6L18.9,17.2l-3,3l2.199,2.2c1,1,1.601,2.399,1.7,3.8h-4l6,6l6-6h-4L24,26z
+		"/>
+</g>
+</svg>
+
+      </svg>
+      <svg id="icon-layers" xmlns="http://www.w3.org/2000/svg" class="iconic">	<svg style="enable-background:new 0 0 31.998 28" xmlns="http://www.w3.org/2000/svg" xml:space="preserve" height="28px" width="32px" version="1.1" y="0px" x="0px" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 31.998 28">
+	<g fill="#010101">
+		<polygon points="0 20 16 24 32 20 32 24 16 28 0 24"/>
+		<polygon points="0 12 16 16 32 12 32 16 16 20 0 16"/>
+		<polygon points="0 4 16 0 32 4 32 8 16 12 0 8"/>
+	</g>
+</svg>
+
+      </svg>
+      <svg id="icon-mail" xmlns="http://www.w3.org/2000/svg" class="iconic"><svg style="enable-background:new 0 0 32 24" xmlns="http://www.w3.org/2000/svg" xml:space="preserve" height="24px" width="32px" version="1.1" y="0px" x="0px" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 32 24">
+	<g fill="#010101">
+		<polygon points="16 11 32 3.9 32 0 0 0 0 3.9"/>
+		<polygon points="16 16 0 8.3 0 24 32 24 32 8.3"/>
+	</g>
+</svg>
+
+      </svg>
+      <svg id="icon-mic" xmlns="http://www.w3.org/2000/svg" class="iconic"><svg style="enable-background:new 0 0 24 32" xmlns="http://www.w3.org/2000/svg" xml:space="preserve" height="32px" width="24px" version="1.1" y="0px" x="0px" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 24 32">
+			<path d="m12 16c2.2 0 4-1.8 4-4v-8c0-2.2-1.8-4-4-4s-4 1.8-4 4v8c0 2 1.8 4 4 4z" fill="#010101"/>
+		<path d="m16 28h-2v-4.2c6-1 10-6 10-12v-1.9c0-1.1-0.9-2-2-2s-2 0.9-2 2v2c0 4.4-3.6 8-8 8s-8-3.6-8-8v-1.9c0-1.1-0.9-2-2-2s-2 0.9-2 2v2c0 5.9 4.3 11 10 12v4h-2c-2.2 0-4 1.8-4 4h16c0-2-2-4-4-4z" fill="#010101"/>
+</svg>
+
+      </svg>
+      <svg id="icon-paperclip" xmlns="http://www.w3.org/2000/svg" class="iconic"><svg style="enable-background:new 0 0 27.994 31.922" xmlns="http://www.w3.org/2000/svg" xml:space="preserve" height="32px" width="28px" version="1.1" y="0px" x="0px" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 27.994 31.922">
+	<path d="m11 32c-2.9 0-5.7-1.1-7.8-3.2-2.1-2-3.2-5-3.2-8 0.002-2.9 1.1-5.7 3.2-7.8l11-11c3-3 8.3-3 11 0.016 3.1 3.1 3.1 8.2 0 11l-10 9.8c-1.9 1.9-5.1 1.9-7.1-0.016-1.9-2-1.9-5.1 0-7.1l3.9-3.9 2.8 2.8-3.9 3.9c-0.26 0.26-0.29 0.55-0.29 0.71s0.037 0.45 0.29 0.71c0.51 0.51 0.9 0.51 1.4 0l10-9.8c1.5-1.5 1.5-4.1-0.016-5.6s-4.1-1.5-5.7 0l-10 11c-1.3 1-2 3-2 5 0 1.9 0.73 3.6 2.1 4.9 2.6 2.6 7.3 2.6 9.9 0l5-5 2.8 2.8-5 5c-2 2-5 3-8 3z" fill="#4E4E50"/>
+</svg>
+
+      </svg>
+      <svg id="icon-spin" xmlns="http://www.w3.org/2000/svg" class="iconic"><svg style="enable-background:new 0 0 28 32" xmlns="http://www.w3.org/2000/svg" xml:space="preserve" height="32px" width="28px" version="1.1" y="0px" x="0px" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 28 32">
+	<g fill="#010101">
+		<path d="m24 6.1l-2.8 2.8c2 2.1 3 4.1 3 7.1 0 5.5-4.5 10-10 10v-2l-4 4 4 4v-2c7.7 0 14-6.3 14-14 0-4-1-7.3-4-9.9z"/>
+		<path d="m18 4l-4-4v2c-7.7 0-14 6.3-14 14 0 3.7 1.5 7.3 4.1 9.9l2.8-2.8c-1.9-2-2.9-4-2.9-7 0-6 4.5-10 10-10v2l4-4z"/>
+	</g>
+</svg>
+
+      </svg>
+      <svg id="icon-wrench" xmlns="http://www.w3.org/2000/svg" class="iconic"><svg style="enable-background:new 0 0 31.998 32" xmlns="http://www.w3.org/2000/svg" xml:space="preserve" height="32px" width="32px" version="1.1" y="0px" x="0px" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 31.998 32">
+	<path d="m32 5.6l-5 5h-5.2v-5.7l5-5c-1-0.15-2-0.3-3-0.3-4 0-8 3.6-8 8 0 1.2 0.3 2.4 0.8 3.4l-16 16c-0.7 1-1 2-1 2 0 2 1.2 3 2.7 3 0.74 0 1.4-0.3 1.9-0.78l16-16c1 1 2 1 3 1 4.4 0 8-3.6 8-8v-2.4z" fill="#010101"/>
+</svg>
+
+      </svg>
+      <svg id="icon-x-alt" xmlns="http://www.w3.org/2000/svg" class="iconic"><svg style="enable-background:new 0 0 32 32" xmlns="http://www.w3.org/2000/svg" xml:space="preserve" height="32px" width="32px" version="1.1" y="0px" x="0px" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 32 32">
+	<path d="m16 0c-8.8 0-16 7.2-16 16s7.2 16 16 16 16-7.2 16-16-7-16-16-16zm8 21l-2.8 2.8-5-5-5.1 5.1-2.8-2.8 4.8-5-5.1-5.1 2.8-2.8 5 4.8 5.1-5.1 2.8 2.8-5 5 5 5z" fill="#010101"/>
+</svg>
+
+      </svg>
+    </svg>
+    <script src="app.js"></script>
+  </body>
+</html>
