--- a/mini-demo.html
+++ b/mini-demo.html
@@ -28,7 +28,7 @@
     <h1>SVG CSS injection. A simple demo.</h1><!-- All rules are created as classes based on the id of the referenced SVG node. In this case, 'icon-mail' -->
     <div class="icon icon-mail"><span class="label">Mail</span></div><!-- All SVGs are placed in the footer to stay out of the way -->
     <svg id="svg-injection-container" width="0" height="0">
-      <svg id="icon-mail" class="iconic"><svg style="enable-background:new 0 0 32 24" xmlns="http://www.w3.org/2000/svg" height="24px" width="32px" y="0px" x="0px"  viewBox="0 0 32 24"><g fill="#010101">	<polygon points="16 11 32 3.9 32 0 0 0 0 3.9"/>	<polygon points="16 16 0 8.3 0 24 32 24 32 8.3"/></g>
+      <svg id="icon-mail" class="iconic"><svg xmlns="http://www.w3.org/2000/svg" height="240px" width="320px" y="0px" x="0px"><g fill="#000"><polygon points="160 110 320 39 320 0 0 0 0 39"/>	<polygon points="160 160 0 83 0 240 320 240 320 83"/></g>
 </svg>
 
       </svg>
