--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       </div>
       <div id="demo" class="section">
         <h2>Demo</h2>
+        <p><strong>Note: All code is unoptimized and proof of concept. The demos are intended to communicate the method rather than the implementation.</strong></p>
         <div class="sub-section">
           <h3>Basic SVG CSS Injection</h3>
           <p>Look at the original HTML/CSS source - there's no reference to these background images. The SVG injection only adds the background image&mdash;all other CSS rules still need to be created manually.</p>
